# linux-voice-assistant

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCKER.md  Dockerfile  GEMINI.md  MYCHANGELOG.md  README.md  README_WSL.md  SENDSPIN_INTEGRATION.md  cliff.toml  docker-compose.dev.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  dockerfile  ha_settings.json  kilo.json  lvas_02_wrapper_backup.py  pyproject.toml  release-please-config.json  release-please-manifest.json  wake_screen.sh
.github/: copilot-instructions.md
.github/workflows/: README.md  docker-build-branch.yml  docker-build-nightly.yml  docker-build-pr.yml  docker-build-release.yml  docker-publish.yml  gen_changelog.yml  lint.yml  release-please.yml  tests.yml
.kilo/: .gitignore
.kilo/command/: lint.md  run.md  setup.md  tests.md
RaspberryPIi/: Fixes
RaspberryPi/: Fixes
Squeezelite/: Setup Manual  setup_squeezelite.sh
docker/: .env.example  DOCKER.md  docker-compose.yaml  docker-entrypoint.sh  dockerfile
docker/systemd/: README.md  linux-voice-assistant.service.example
docs/: ESPHome_WakeWord_Issues.md  Enabling_AEC.md  additional_audio_settings.md  api-communication (novice).md  audio_options.md  enabling_aec.md  esphome-native-api-full-spec.md  install_application.md  install_audioserver.md  lva-esphome-api-implementation.md  peripheral_api.md
examples/Jabra Speak 410/: DOCS.md  main.py
examples/Peripheral web console/: DOCS.md  peripheral_web_console.html
examples/ReSpeaker 2mic HAT/: DOCS.md  Dockerfile  compose.yml  respeaker_2mic_hat.py
examples/ReSpeaker 4mic HAT/: DOCS.md  Dockerfile  respeaker_4mic_hat.py
examples/ReSpeaker Mic Array v2.0 (USB)/: DOCS.md  respeaker_usb_mic_array.py
examples/Satellite1 HAT Board/: DOCS.md  Satellite1_HAT_Board.py  requirements.txt
examples/Satellite1_HAT_Board/: DOCS.md  Dockerfile  Satellite1_HAT_Board.py  compose.yml
examples/mmWave presence (LD2410)/: DOCS.md  Dockerfile  compose.yml  mmwave_presence.py  requirements.txt
led/: led_journal_pattern.service  led_reset.py  state_patterns.py
linux_voice_assistant/: __main__.py  api_server.py  audio_device_util.py  audio_engine.py  audio_sinks.py  button_controller.py  cleanup.py  config.json  config.py  entity.py  error_handling.py  led_controller.py  models.py  monitoring.py  mpv_player.py  mqtt_controller.py  peripheral_api.py  satellite.py  screen.py  sendspin_bridge.py  util.py  utilities.py  wake_word.py  webrtc.py  xvf3800_led_backend.py  zeroconf.py
linux_voice_assistant/player/: base.py  libmpv.py
lvas_startup/: lvas-startup-helper-multiuser.service  lvas-startup-helper.service  lvas_kiosk.desktop  lvas_launch.sh
preferences/default/: README.md  default.json  default_cli.json  default_wsl_cli.json
script/: deploy  install-deps  lint  lint_mypy  remove  restart  restart-all  run  service  setup  status  status-all  stop  stop-all  version
skills/pr-review/: SKILL.md  verification.md
systemd/: pulseaudio-root.service.example
tests/: readme.md
tests/unit/: test_api_server.py  (+9 more)
wakewords/: stop.json
windows/: TestScreenToggle.ps1  WakeScreen.ps1
(+6 files in other folders)
