[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "linux-voice-assistant"
version     = "1.0.0"
license     = {text = "Apache-2.0"}
description = "Linux voice assistant for Home Assistant using the ESPHome protocol"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["home", "assistant", "voice", "esphome", "linux"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9.0"
dependencies = [
    "aioesphomeapi==42.7.0",
    "netifaces2==0.0.22",
    "soundcard<1",
    "numpy>=2,<3",
    "pymicro-wakeword>=2,<3",
    "pyopen-wakeword>=1,<2",
    "python-mpv>=1,<2",
    "zeroconf<1",
    "getmac<1",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
    "pylint",
    "pytest",
    "isort",
]

[project.urls]
"Source Code" = "http://github.com/OHF-Voice/linux-voice-assistant"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["linux_voice_assistant"]
exclude = ["tests", "tests.*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
exclude = '''
/(
  \.eggs
| \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
| dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 88
max-complexity = 18
select = "E9,F63,F7,F82"
ignore = "E203,E501,W503"
exclude = [
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "build",
  "dist",
  "__pycache__",
  "*.pyc",
]

[tool.pylint.messages_control]
disable = [
  "abstract-method",
  "cyclic-import",
  "duplicate-code",
  "global-statement",
  "import-outside-toplevel",
  "inconsistent-return-statements",
  "locally-disabled",
  "not-context-manager",
  "too-few-public-methods",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-lines",
  "too-many-locals",
  "too-many-public-methods",
  "too-many-return-statements",
  "too-many-statements",
  "too-many-boolean-expressions",
  "unnecessary-pass",
  "unused-argument",
  "broad-except",
  "too-many-nested-blocks",
  "invalid-name",
  "unused-import",
  "fixme",
  "useless-super-delegation",
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "import-error",
  "consider-using-with"
]

[tool.pylint.format]
expected-line-ending-format = "LF"
